[workspace]
members = ["contracts/*", "packages/*"]

[workspace.package]
version       = "1.0.0"
authors       = ["Larry Engineer <larry@delphidigital.io>"]
edition       = "2021"
rust-version  = "1.65"
license       = "GPL-v3-or-later"
homepage      = "https://marsprotocol.io"
repository    = "https://github.com/mars-protocol/periphery"
documentation = "https://github.com/mars-protocol/periphery#readme"

[workspace.dependencies]
cosmwasm-schema = "1.1"
cosmwasm-std    = "1.1"
cw2             = "1.0"
cw-storage-plus = "1.0"
serde           = "1.0"
thiserror       = "1.0"

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = true
rpath            = false
