[workspace]
members = ["contracts/*"]

[workspace.package]
authors       = ["Larry Engineer <larry@delphidigital.io>"]
edition       = "2021"
rust-version  = "1.78"
license       = "GPL-3.0-or-later"
homepage      = "https://marsprotocol.io"
repository    = "https://github.com/mars-protocol/periphery"
documentation = "https://github.com/mars-protocol/periphery#readme"

[workspace.dependencies]
cosmwasm-schema = "1.5.7"
cosmwasm-std    = "1.5.7"
cw2             = "1.1.2"
cw-storage-plus = "1.2.0"
cw-utils        = "1.0.3"
serde           = "1.0.203"
thiserror       = "1.0.61"

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = true
rpath            = false
