[package]
name = "mars-airdrop"
version = "0.1.0"
authors = ["larry <larry@delphidigital.io>"]
edition = "2021"
license = "UNLICENSED"
repository = "https://github.com/mars-protocol/periphery"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = "1.1"
cosmwasm-schema = "1.1"
cw2 = "0.15"
cw-storage-plus = "0.15"
bech32 = "0.9"
hex = "0.4"
ripemd = "0.1"
sha2 = "0.10"

[dev-dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }

[profile.release]
overflow-checks = true
