[package]
name       = "mars-airdrop"
version    = "0.1.0"
authors    = ["larry <larry@delphidigital.io>"]
edition    = "2021"
repository = "https://github.com/mars-protocol/periphery"

[lib]
crate-type = ["cdylib", "rlib"]
doctest    = false

[dependencies]
bech32          = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw2             = { workspace = true }
cw-storage-plus = { workspace = true }
hex             = { workspace = true }
mars-types      = { path = "../../packages/types" }
ripemd          = { workspace = true }
sha2            = { workspace = true }

[dev-dependencies]
cosmwasm-schema = { workspace = true }
serde           = { workspace = true }
