[package]
name = "mars-delegator"
version = "0.1.0"
authors = ["larry <larry@delphidigital.io>"]
edition = "2021"
repository = "https://github.com/mars-protocol/periphery"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
cosmwasm-schema = "1.1"
cosmwasm-std = { version = "1.1", features = ["staking"] }
cw2 = "0.15"
cw-storage-plus = "0.15"
mars-types = { path = "../../packages/types" }
thiserror = "1.0"

[dev-dependencies]
cosmwasm-schema = "1.1"

[profile.release]
overflow-checks = true
