[package]
name          = "mars-delegator"
description   = "Smart contract managing community fund delegation to genesis validators on Mars Hub"
version       = "1.2.0"
authors       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
doctest    = false

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true, features = ["staking"] }
cw2             = { workspace = true }
cw-storage-plus = { workspace = true }
thiserror       = { workspace = true }

[dev-dependencies]
cosmwasm-schema = { workspace = true }
