[package]
name = "mars-liquidation-filterer"
version = "0.1.0"
authors = [
  "Piotr Babel <piotr@delphilabs.io>",
  "larry_0x <larry@delphidigital.io>"
]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
mars-outpost = { path = "../../../outposts/packages/outpost", version = "0.1.0" }

cosmwasm-std = "1.0"
cw-storage-plus = "0.14"
schemars = "0.8"
serde = { version = "1.0.144", default-features = false, features = ["derive"] }
thiserror = "1.0.33"

[dev-dependencies]
mars-testing = { version = "0.1.0", path = "../../../outposts/packages/testing" }

[profile.release]
overflow-checks = true
