[package]
name          = "mars-vesting"
description   = "Smart contract managing token vesting for Mars protocol contributors"
version       = "1.1.1"
authors       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
doctest    = false

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true, features = ["stargate"] }
cw2             = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils        = { workspace = true }
thiserror       = { workspace = true }

[dev-dependencies]
cosmwasm-schema = { workspace = true }
serde           = { workspace = true }
